--- a/_layout/default.html
+++ b/_layout/default.html
@@ -27,7 +27,11 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <h2>On the Web</h2>
+        <p class="view">
+          <a href="{{ site.github.owner_url }}">GitHub</a>
+          <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a>
+        </p>
         {% endif %}
 
         {% if site.show_downloads %}
