Update sidebar links (default.html).

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <h2>On the Web</h2>
+        <h3>On the Web</h3>
         <p class="view">
-          <a href="{{ site.github.owner_url }}">GitHub</a>
+          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
           <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a>
         </p>
         {% endif %}
