--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
         {% if site.github.is_user_page %}
         <p class="view">
-          <b>On the Web</b>
+          <h3>On the Web</h3>
           <a href="{{ site.github.owner_url }}">GitHub</a> <br>
           <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a>
         </p>
