--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -1,41 +1,25 @@
 <!-- Table with CV information -->
+<h3>Work History</h3>
 <table class="table-no-border">
   <tbody>
     <tr>
-      <td style="text-align: left">Data Science Consultant</td>
+      <td style="text-align: left"><b>Data Science Consultant</b></td>
       <td style="text-align: right">Feb 2019 to Present</td>
     </tr>
     <tr>
-      <td style="text-align: left">Data Scientist, Aston Capital Management</td>
+      <td style="text-align: left"><b>Data Scientist</b>, Aston Capital Management</td>
       <td style="text-align: right">Jan 2018 to Dec 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left">Data Scientist, RTInsights</td>
+      <td style="text-align: left"><b>Data Scientist</b>, RTInsights</td>
       <td style="text-align: right">Jul 2017 to Jan 2018</td>
     </tr>
     <tr>
       <td style="text-align: left">Postdoctoral Fellow, McGill University</td>
       <td style="text-align: right">Aug 2015 to Jun 2017</td>
     </tr>
-  </tbody>
-</table>
-
-<table>
-  <tbody>
     <tr>
-      <td style="text-align: left">Data Science Consultant</td>
-      <td style="text-align: right">Feb 2019 to Present</td>
-    </tr>
-    <tr>
-      <td style="text-align: left">Data Scientist, Aston Capital Management</td>
-      <td style="text-align: right">Jan 2018 to Dec 2018</td>
-    </tr>
-    <tr>
-      <td style="text-align: left">Data Scientist, RTInsights</td>
-      <td style="text-align: right">Jul 2017 to Jan 2018</td>
-    </tr>
-    <tr>
-      <td style="text-align: left">Postdoctoral Fellow, McGill University</td>
+      <td style="text-align: left">Postdoctoral Fellow, Tel Aviv University</td>
       <td style="text-align: right">Aug 2015 to Jun 2017</td>
     </tr>
   </tbody>
