--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -15,12 +15,12 @@
       <td style="text-align: right">Jul 2017 to Jan 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left">Postdoctoral Fellow, McGill University</td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, McGill University</td>
       <td style="text-align: right">Aug 2015 to Jun 2017</td>
     </tr>
     <tr>
-      <td style="text-align: left">Postdoctoral Fellow, Tel Aviv University</td>
-      <td style="text-align: right">Aug 2015 to Jun 2017</td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, Tel Aviv University</td>
+      <td style="text-align: right">Sep 2012 to Jul 2015</td>
     </tr>
   </tbody>
 </table>
