--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -25,3 +25,16 @@
   </tbody>
 </table>
 
+<h3>Education</h3>
+<table class="table-no-border">
+  <tbody>
+    <tr>
+      <td style="text-align: left"><b>PhD and MSc</b> in Astronomy, University of Florida</td>
+      <td style="text-align: right">2006 to 2012</td>
+    </tr>
+    <tr>
+      <td style="text-align: left"><b>BSc</b> in Physics and Astronomy, University of Rochester</td>
+      <td style="text-align: right">2002 to 2006</td>
+    </tr>
+</table>
+
