--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -36,5 +36,6 @@
       <td style="text-align: left"><b>BSc</b> in Physics and Astronomy, University of Rochester</td>
       <td style="text-align: right">2002 to 2006</td>
     </tr>
+  </tbody>
 </table>
 
