--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -11,15 +11,15 @@
       <td style="text-align: right">Jan 2018 to Dec 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Data Scientist</b>, RTInsights</td>
+      <td style="text-align: left"><b>Data Scientist</b>, <a href="https://www.rtinsights.com/">RTInsights</a></td>
       <td style="text-align: right">Jul 2017 to Jan 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Postdoctoral Fellow</b>, McGill University</td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://msi.mcgill.ca/">McGill University</a></td>
       <td style="text-align: right">Aug 2015 to Jun 2017</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Postdoctoral Fellow</b>, Tel Aviv University</td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://physics.tau.ac.il/astrophysics">Tel Aviv University</a></td>
       <td style="text-align: right">Sep 2012 to Jul 2015</td>
     </tr>
   </tbody>
