--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -11,15 +11,15 @@
       <td style="text-align: right">Jan 2018 to Dec 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Data Scientist</b>, <a href="https://www.rtinsights.com/">RTInsights</a></td>
+      <td style="text-align: left"><b>Data Scientist</b>, <a href="https://www.rtinsights.com/" target="_blank">RTInsights</a></td>
       <td style="text-align: right">Jul 2017 to Jan 2018</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://msi.mcgill.ca/">McGill University</a></td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://msi.mcgill.ca/" target="_blank">McGill University</a></td>
       <td style="text-align: right">Aug 2015 to Jun 2017</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://physics.tau.ac.il/astrophysics">Tel Aviv University</a></td>
+      <td style="text-align: left"><b>Postdoctoral Fellow</b>, <a href="https://physics.tau.ac.il/astrophysics" target="_blank">Tel Aviv University</a></td>
       <td style="text-align: right">Sep 2012 to Jul 2015</td>
     </tr>
   </tbody>
@@ -29,7 +29,7 @@
 <table class="table-no-border">
   <tbody>
     <tr>
-      <td style="text-align: left"><b>PhD and MSc</b> in Astronomy, University of Florida</td>
+      <td style="text-align: left"><b>PhD and MSc</b> in <a href="https://www.astro.ufl.edu/" target="_blank">Astronomy</a>, University of Florida</td>
       <td style="text-align: right">2006 to 2012</td>
     </tr>
     <tr>
