--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -33,7 +33,7 @@
       <td style="text-align: right">2006 to 2012</td>
     </tr>
     <tr>
-      <td style="text-align: left"><b>BSc</b> in Physics and Astronomy, University of Rochester</td>
+      <td style="text-align: left"><b>BSc</b> in <a href="http://www.pas.rochester.edu/" target="_blank">Physics and Astronomy</a>, University of Rochester</td>
       <td style="text-align: right">2002 to 2006</td>
     </tr>
   </tbody>
