--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <p class="view">
           <h3>On the Web</h3>
           <a href="{{ site.github.owner_url }}">GitHub</a> <br>
-          <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a><br>
           <a href="https://featuringdata.substack.com">Substack</a>
         </p>
         {% endif %}
