Added a link to Substack blog in the sidebar and on the homepage.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
           <h3>On the Web</h3>
           <a href="{{ site.github.owner_url }}">GitHub</a> <br>
           <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a><br>
-          <a href="https://featuringdata.substack.com">Substack</a>
+          <a href="https://featuringdata.substack.com/?no_cover=true">Substack</a>
         </p>
         {% endif %}
 
