--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
           <h3>On the Web</h3>
           <a href="{{ site.github.owner_url }}">GitHub</a> <br>
           <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a><br>
+          <a href="https://medium.com/@daniel.capellupo">Medium</a><br>
           <a href="https://featuringdata.substack.com/?no_cover=true">Substack</a>
         </p>
         {% endif %}
