Updating and rearranging social and blog links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,18 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
+        <p class="view">
+          <h3>Social</h3>
+          <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a><br>
+          <a href="https://www.instagram.com/dan.capellupo/">Instagram</a><br>
+          <a href="https://www.youtube.com/@DanCapellupoDS/">YouTube</a>
+        </p>
         {% if site.github.is_user_page %}
         <p class="view">
-          <h3>On the Web</h3>
-          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
-          <a href="https://www.linkedin.com/in/dcapellupo/">LinkedIn</a><br>
+          <h3>Blog and Code</h3>
+          <a href="https://featuringdata.substack.com/?no_cover=true">Substack</a><br>
           <a href="https://medium.com/@daniel.capellupo">Medium</a><br>
-          <a href="https://featuringdata.substack.com/?no_cover=true">Substack</a>
+          <a href="{{ site.github.owner_url }}">GitHub</a>
         </p>
         {% endif %}
 
