Updating work info

--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -3,8 +3,12 @@
 <table class="table-no-border">
   <tbody>
     <tr>
+      <td style="text-align: left"><b>Senior Data Science Consultant</b></td>
+      <td style="text-align: right"></td>
+    </tr>
+    <tr>
       <td style="text-align: left"><b>Senior Data Scientist, Manager</b>, Deloitte</td>
-      <td style="text-align: right">May 2021 to Present</td>
+      <td style="text-align: right">May 2021 to Sep 2023</td>
     </tr>
     <tr>
       <td style="text-align: left"><b>Data Science Consultant</b></td>
