--- a/_includes/cv_table.html
+++ b/_includes/cv_table.html
@@ -4,7 +4,7 @@
   <tbody>
     <tr>
       <td style="text-align: left"><b>Senior Data Science Consultant</b></td>
-      <td style="text-align: right"></td>
+      <td style="text-align: right">Current</td>
     </tr>
     <tr>
       <td style="text-align: left"><b>Senior Data Scientist, Manager</b>, Deloitte</td>
